--- a/Changes
+++ b/Changes
@@ -1,11 +1,14 @@
 Revision history for perl distribution Mojo-Base-Tiny
 
+0.04 Not Released
+  - (Don't) add -async flag from Mojolicious 8.28
+
 0.03 2019-07-13T06:31:34+0200
- - Remove development stuff
+  - Remove development stuff
 
 0.02 2019-07-11T19:19:06+0200
- - Correct dependency on Sub::Util
-   Contributor: Mohammad S Anwar
+  - Correct dependency on Sub::Util
+    Contributor: Mohammad S Anwar
 
 0.01 2019-07-10T06:44:48+0200
- - Start with code from Mojolicious 8.18
+  - Start with code from Mojolicious 8.18
